<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Register">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="87dp"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/edtFullName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="Full Name" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="190dp"
        android:layout_height="95dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY" />


    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/registerbutton"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"/>

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="30dp"
            android:textStyle="bold"
            android:text="@string/login"/>

    </LinearLayout>

</LinearLayout>